Added translated about, payment_terms, privacy, terms, why_mobile

--- a/app/views/home/about_es.html
+++ b/app/views/home/about_es.html
@@ -1,6 +1,6 @@
 <div id="about" class="yomobi-info-page">
 
-  <h2>YoMobi's mission is to make it easy for everyone to join the mobile revolution.</h2>
+  <h2>La misión de YoMobi es la de facilitar a todos su conexión a la revolución móvil.</h2>
 
   <ul class="language-bar">
 	<li><a href="about">English</a></li>
@@ -8,9 +8,9 @@
 	<li><a href="about_es">Español</a></li>
   </ul>
   
-  <p>Smart phones are overtaking the PC as the most popular way to get information online. This exponential growth in the use of mobile devices has created a whole new paradigm for accessing content. To succeed in the mobile revolution, you have to make it easy for visitors to find and interact with you wherever and whenever they are. That's where we come in.</p>
+  <p>Los teléfonos inteligentes han desplazado a las PC / ordenadores como el medio más popular de obtener información en línea. Este crecimiento exponencial en el uso de dispositivos móviles ha creado un paradigma completamente nuevo en cuanto al acceso a contenidos se refiere. Para tener éxito en esta revolución móvil, tienes que facilitar el que los visitantes te encuentren e interactúen contigo, donde quiera que ellos se estén y quienes quiera que ellos sean. Y es en esto en donde nosotros entramos en acción.</p>
   <br>
-  <p>YoMobi is a free platform that allows you to quickly build an interactive, social-media ready, mobile-optimized site. We've made it easy for you to join the mobile web. Use our simple and intuitive content management platform to build your custom site and put your information online in minutes. We've also made it easy for your visitors to get in touch with you. Our interactive widgets let visitors contact you from their mobile device. Finally, we've made it easy for your site to go viral. Social media integration is an automatic part of every YoMobi site. Joining the mobile web has never been so easy.</p>
+  <p>YoMobi es una plataforma gratuita que te permite construir rápidamente un sitio móvil optimizado, interactivo y funcional para las redes sociales. Hemos hecho que te sea fácil el conectarte a tu web móvil. Utiliza nuestra plataforma intuitiva para la administración de contenidos para construir el sitio a tu preferencia y para que pongas tu información en línea en tan sólo unos minutos. También hemos facilitado el que tus visitantes se pongan en contacto contigo. Nuestras funciones interactivas le permiten a tus visitantes el contactarte desde su dispositivo móvil. Y por último, hemos facilitado el que tu sitio se torne viral. Su integración a las redes sociales es una característica automática de todo sitio YoMobi. El integrarse a la red móvil nunca fue tan fácil.</p>
   <br>
-  <p>The world is on the go! Get mobilized with YoMobi.</p>
+  <p>¡El mundo está en marcha! Movilízate con YoMobi.</p>
 </div>
