--- a/app/views/home/why_mobile_es.html
+++ b/app/views/home/why_mobile_es.html
@@ -1,7 +1,7 @@
 
 <div id="why_mobile" class="yomobi-info-page">
 
-<h1>Having a mobile-optimized site is important.</h1>
+<h1>Es importante contar con un sitio web optimizado para móviles.</h1>
 
 <ul class="language-bar">
 <li><a href="why-mobile">English</a></li>
@@ -9,12 +9,12 @@
 <li><a href="why-mobile_es">Español</a></li>
 </ul>
 
-<h2>When you don't have a mobile site:</h2>
+<h2>Cuando no tienes un sitio móvil:</h2>
 <ul class="bold_list">
-<li><span class="hilite">Existing customers are frustrated and you lose revenue opportunity.</span></li>
-<li><span class="hilite">Your new customer reach shrinks</span> because more people browse the web on their phones.</li>
-<li><span class="hilite">40% of your mobile vistors will turn to your competitor</span> after a bad mobile experience.</li>
-<li><span class="hilite">57% of your customers won't recommend you</span> if you have a bad mobile site.</li>
+<li><span class="hilite">Los clientes existentes están frustrados y pierdes la oportunidad de tener ingresos.</span></li>
+<li><span class="hilite">El alcance hacia nuevos clientes se reduce</span> debido a que cada vez más gente navega por la red a través de sus móviles.</li>
+<li><span class="hilite">El 40% de tus visitantes móviles se irán con un competidor</span> después de una mala experiencia móvil.</li>
+<li><span class="hilite">El 57% de de tus clientes no te recomendarán</span> si tienes un sitio móvil deficiente.</li>
 </ul>
 <br/>
 <hr/>
