--- a/app/views/home/payment_terms_es.html
+++ b/app/views/home/payment_terms_es.html
@@ -1,5 +1,5 @@
 <div id="payment_terms" class="yomobi-info-page">
-  <h2>Payment Terms</h2>
+  <h2>Términos de Pago</h2>
 
   <ul class="language-bar">
   <li><a href="payment_terms.html">English</a></li>
@@ -8,6 +8,6 @@
   </ul>
 
   <div class="marketing">
-  <p>All payments in connection with this site or service shall be in United States dollars and are <u>non-refundable and non-cancelable</u>. Subscriptions shall be cancelable at any time, and you shall not be charged for any subsequent subscription fees, however any payments already made shall not be refunded. You shall be fully responsible for the payment of any taxes that apply to this agreement, and your use of the site or the service. The service, including without limitation payment processing, may be handled directly by us or by online third parties. Where a third party handles a payment, the payment is subject to the terms of use and privacy policy of such third party (including among others payment methods, tax liability, collection and use of your personal information, and support levels). We recommend that you review the terms of use and privacy policy of such third parties before submitting any personal information and using such third parties' services.</p>
+  <p>Todo pago en relación a este sitio o servicio deberá ser en Dólares de los Estados Unidos de América y <u>no es reembolsable ni cancelable</u>. Las suscripciones serán cancelables en cualquier momento, y no se te deberá cobrar por ninguna cuota de suscripción posterior, sin embargo, todo pago ya efectuado no será reembolsable. Tú serás completamente responsable por el pago de cualquier tipo de impuestos que apliquen para este acuerdo, y para el uso que hagas del sitio o del servicio. El servicio, incluyendo, pero no limitado a procesamiento de pagos, puede ser operado directamente por nosotros o por terceros que operen en línea. Cuando un tercero opere un proceso de pago, el pago queda sujeto a los términos de uso y de privacidad de ese tercero (incluyendo entre otras cosas, métodos de pago, responsabilidad fiscal, captura y uso de tu información personal, y límites de asesoría). Te recomendamos que revises los términos de uso y privacidad de esos terceros antes de enviarles cualquier información personal usando sus plataformas de servicio.</p>
   </div>
 </div>
