--- a/app/views/home/privacy_es.html
+++ b/app/views/home/privacy_es.html
@@ -1,6 +1,6 @@
 <div id="privacy" class="yomobi-info-page">
 
-<h2>Privacy Policy</h2>
+<h2>Política de Privacidad</h2>
 
 <ul class="language-bar">
 <li><a href="privacy">English</a></li>
@@ -8,94 +8,94 @@
 <li><a href="privacy_es">Español</a></li>
 </ul>
 
-<h3>What information do we collect? </h3>
+<h3>¿Qué información pedimos? </h3>
 
-<p>We collect information from you when you register on our site or fill out a form.</p>
+<p>Capturamos la información que nos das al registrarte o al llenar algún formato.</p>
 <br>
-<p>When ordering or registering on our site, as appropriate, you may be asked to enter your: name, e-mail address, mailing address or phone number. You may, however, visit our site anonymously.</p>
+<p>Cuando ordenas algo o cuando te registras en nuestro sitio, como es natural, se te puede pedir que ingreses tus datos: nombre, dirección de e-mail, domicilio postal o número de teléfono. Puedes, sin embargo, visitar nuestro sitio de manera anónima.</p>
 <br>
-<p>Google, as a third party vendor, uses cookies to serve ads on our site. Google's use of the DART cookie enables it to serve ads to your users based on their visit to our site and other sites on the Internet. Users may opt out of the use of the DART cookie by visiting the Google ad and content network privacy policy.</p>
+<p>Google, que es un proveedor en calidad de tercero, utiliza cookies para colocar anuncios en nuestro sitio. El uso de cookies tipo DART por parte de Google le permite colocar anuncios para tus usuarios basado en la visita de tus usuarios a nuestro sitio y a otros sitios en internet. Los usuarios pueden optar por renunciar al uso de las cookies tipo DART visitando la página de la  política de publicidad y privacidad en los contenidos de red de Google.</p>
 
-<h3>What do we use your information for?</h3>
+<h3>¿Para qué usamos tu información?</h3>
 
-<p>Any of the information we collect from you may be used in one of the following ways:</p>
+<p>Cualquier información que capturemos de ti puede ser usada de alguna de las siguientes formas:</p>
 <br>
 <ol>
 <li>
-To personalize your experience<br />
-(your information helps us to better respond to your individual needs)
+Para personalizar tu experiencia<br />
+(tu información nos ayuda a responder mejor a tus necesidades individuales)
 </li>
 <li>
-To improve our website<br />
-(we continually strive to improve our website offerings based on the information and feedback we receive from you)
+Para mejorar nuestro sitio web<br />
+(nos esforzamos de manera constante en mejorar lo que brinda nuestro sitio web basándonos en la información y comentarios que recibimos de ti)
 </li>
 <li>
-To improve customer service<br />
-(your information helps us to more effectively respond to your customer service requests and support needs)
+Para mejorar nuestro servicio al cliente<br />
+(tu información nos ayuda a responder de manera efectiva a tus solicitudes de servicio a cliente y apoyarte en lo que necesitas)
 </li>
 <li>
-To process transactions<br />
-Your information, whether public or private, will not be sold, exchanged, transferred, or given to any other company for any reason whatsoever, without your consent, other than for the express purpose of delivering the purchased product or service requested.
+Para procesar transacciones<br />
+Tu información, sea ésta pública o privada, no se puede vender, intercambiar, transferir, o dar a cualquier otra empresa por ningún motivo, sin tu consentimiento, a no ser por el propósito expreso de proporcionarte el producto o servicio que hubieras solicitado.
 </li>
 <li>
-To administer a contest, promotion, survey or other site feature
+Para llevar a cabo concursos, promociones, encuestas o cualquier otra actividad del sitio
 </li>
 <li>
-To send periodic emails<br />
-Note: If at any time you would like to unsubscribe from receiving future emails, we include detailed unsubscribe instructions at the bottom of each email.
+Para enviarte emails periódicos<br />
+Nota: Si en cualquier momento desearas anular tu suscripción para recibir emails en lo futuro, te incluimos instrucciones detalladas para anular tu suscripción en las últimas líneas de cada email.
 </li>
 </ol>
-<h3>How do we protect your information?</h3>
+<h3>¿Cómo protegemos tu información?</h3>
 
-<p>We implement a variety of security measures to maintain the safety of your personal information when you enter, submit, or access your personal information.</p>
+<p>Implementamos una serie de medidas de seguridad para mantener la seguridad de tu información personal cuando tú ingresas, envías o accedes a tu información personal.</p>
 
-<h3>Do we use cookies?</h3>
+<h3>¿Usamos cookies?</h3>
 
-<p>Yes (Cookies are small files that a site or its service provider transfers to your computer’s hard drive through your Web browser (if you allow) that enables the sites or service providers systems to recognize your browser and capture and remember certain information</p>
+<p>Sí (las Cookies son pequeños archivos que un sitio o de alguno de sus proveedores de servicios transfiere al disco duro de tu computadora a través de tu navegador de internet, (si lo permites) eso da cabida a que los sitios o los sistemas de los proveedores de servicio reconozcan tu navegador y capturen o recuerden cierta información</p>
 <br>
-<p>We use cookies to understand and save your preferences for future visits, keep track of advertisements and compile aggregate data about site traffic and site interaction so that we can offer better site experiences and tools in the future. We may contract with third-party service providers to assist us in better understanding our site visitors. These service providers are not permitted to use the information collected on our behalf except to help us conduct and improve our business.</p>
+<p>Utilizamos cookies para entender y guardar tus preferencias para futuras visitas, dar seguimiento de la publicidad y acumular los datos globales sobre el tráfico e interacción con el sitio, de modo que podamos ofrecer mejores servicios y herramientas para el futuro. Podemos contratar los servicios de un tercero para ayudarnos a entender mejor a nuestros visitantes. Estos proveedores de servicios no están autorizados a utilizar la información capturada a nuestro nombre, excepto para ayudarnos a dirigir y mejorar nuestros negocios.</p>
 <br>
-<p>If you prefer, you can choose to have your computer warn you each time a cookie is being sent, or you can choose to turn off all cookies via your browser settings. Like most websites, if you turn your cookies off, some of our services may not function properly. However, you can still place orders by contacting customer service.</p>
+<p>Si así lo prefieres, puedes elegir que tu computadora te advierta cada vez que una cookie le es enviada, o puedes elegir inhabilitar las cookies mediante ajustes en tu navegador. Como la mayoría de los sitios web, si inhabilitas las cookies, algunos de nuestros servicios puede no funcionar de la manera más adecuada. Sin embargo, podrás seguir haciendo pedidos haciendo contacto con servicio al cliente.</p>
 
-<h3>Do we disclose any information to outside parties?</h3>
+<h3>¿Revelamos alguna información a entidades externas?</h3>
 
-<p>We do not sell, trade, or otherwise transfer to outside parties your personally identifiable information. This does not include trusted third parties who assist us in operating our website, conducting our business, or servicing you, so long as those parties agree to keep this information confidential. We may also release your information when we believe release is appropriate to comply with the law, enforce our site policies, or protect ours or others rights, property, or safety. However, non-personally identifiable visitor information may be provided to other parties for marketing, advertising, or other uses.</p>
+<p>Nosotros no vendemos, ni comerciamos, ni transferimos de ninguna manera a entidades o partes externas tu información individualmente identificable. Esto no abarca a terceros de confianza que nos ayudan en la operación de nuestro sitio web, manejo de nuestros negocios, o brindando algún servicio para ti, de modo que todas estas entidades tienen un acuerdo para mantener esta información de manera confidencial. Nosotros podemos también liberar tu información cuando consideremos hacerlo para cumplir con la ley, hacer cumplir las políticas de nuestro sitio, o para proteger nuestros derechos o los de terceros, en su propiedad y en su seguridad. Sin embargo, la información del visitante que no sea individualmente identificable puede ser suministrada a otras entidades para propósitos de marketing, publicidad o usos afines.</p>
 
-<h3>Third party links </h3>
+<h3>Enlaces a terceros </h3>
 
-<p>Occasionally, at our discretion, we may include or offer third party products or services on our website. These third party sites have separate and independent privacy policies. We therefore have no responsibility or liability for the content and activities of these linked sites. Nonetheless, we seek to protect the integrity of our site and welcome any feedback about these sites.</p>
+<p>Ocasionalmente, a nuestro criterio, podemos incluir u ofrecer productos o servicios de terceros en nuestro sitio web. Estos sitios de terceros tienen políticas de privacidad independientes respecto a las nuestras. Por lo tanto, no asumimos ninguna responsabilidad u obligación acerca del contenido y actividades de estos sitios vinculados. Sin embargo, buscamos proteger la integridad de nuestro sitio y agradecemos cualquier comentario sobre estos sitios.</p>
 
-<h3>California Online Privacy Protection Act Compliance</h3>
+<h3>Cumplimiento con el Acta de Protección a la Privacidad En Línea de California</h3>
 
-<p>Because we value your privacy we have taken the necessary precautions to be in compliance with the California Online Privacy Protection Act. We therefore will not distribute your personal information to outside parties without your consent.</p>
+<p>Debido a que valoramos tu privacidad, hemos tomado las debidas precauciones para cumplir con el Acta de Protección a la Privacidad En Línea de California. Por lo tanto, no distribuiremos tu información personal a entidades externas sin tu consentimiento.</p>
 <br>
-<p>As part of the California Online Privacy Protection Act, all users of our site may make any changes to their information at anytime by logging into our sign-in page and going to the 'Edit Profile' page.</p>
+<p>Como parte del Acta de Protección a la Privacidad En Línea de California, todos los usuarios de nuestro sitio pueden hacer cualquier cambio en su información en cualquier momento con tan sólo iniciar sesión en nuestra página de registro y entrando a la página 'Editar Perfil'.</p>
 
-<h3>Children’s Online Privacy Protection Act Compliance</h3>
+<h3>Cumplimiento del Acta de Protección de la Privacidad en Línea de Menores</h3>
 
-<p>We are in compliance with the requirements of COPPA (Childrens Online Privacy Protection Act), we do not collect any information from anyone under 13 years of age. Our website, products and services are all directed to people who are at least 13 years old or older.</p>
+<p>Nosotros en cumplimiento de las exigencias de la COPPA (Acta de Protección de la Privacidad en Línea de Menores), nosotros no capturamos ninguna información de persona alguna que sea menor de 13 años de edad. Nuestro sitio web, nuestros productos y servicios, están todos orientados hacia personas que tengan al menos 13 años de edad..</p>
 
-<h3>Online Privacy Policy Only</h3>
+<h3>Política Exclusiva de Privacidad en Línea</h3>
 
-<p>This online privacy policy applies only to information collected through our website and not to information collected offline.</p>
+<p>Esta política exclusiva de privacidad en línea aplica únicamente a la información capturada a través de nuestro sitio web y no de la obtenida fuera de línea.</p>
 
-<h3>Terms and Conditions</h3>
+<h3>Términos y Condiciones</h3>
 
-<p>Please also visit our Terms and Conditions section establishing the use, disclaimers, and limitations of liability governing the use of our website at  <a href="http://www.yomobi.com/">http://www.yomobi.com</a></p>
+<p>Visita también por favor nuestra sección de Términos y Condiciones en donde se establece el uso, descargos de responsabilidades y límites de responsabilidad que rigen el uso de nuestro sitio web en<a href="http://www.yomobi.com/"> http://www.yomobi.com</a></p>
 
-<h3>Your Consent</h3>
+<h3>Tu Consentimiento</h3>
 
-<p>By using our site, you consent to our websites privacy policy.</p>
+<p>Por el hecho de usar nuestro sitio, das el consentimiento a la política de privacidad de nuestros sitios web.</p>
 
-<h3>Changes to our Privacy Policy</h3>
+<h3>Cambios en nuestra Política de Privacidad</h3>
 
-<p>If we decide to change our privacy policy, we will post those changes on this page, and/or update the Privacy Policy modification date below.</p>
+<p>Si decidimos cambiar nuestra política de privacidad, publicaremos tales cambios en esta página, y/o actualizaremos la fecha de modificación de la Política de Privacidad que aparece abajo</p>
 
-<p>This policy was last modified on July 30, 2011</p>
+<p>Esta política de privacidad fue modificada por última vez el 30 de Julio de 2011</p>
 
-<h3>Contacting Us</h3>
+<h3>Contáctanos</h3>
 
-<p>If there are any questions regarding this privacy policy you may contact us using the information below.</p>
+<p>Si tienes cualquier duda o pregunta respecto a esta política de privacidad, te puedes contactar con nosotros usando la siguiente información.</p>
 <br>
 <p><a href="http://www.yomobi.com">www.YoMobi.com</a><br />
 Austin, Texas<br>
