Updated max photo size to 300px wide, updated company header in builder to include site URL, updated photo select css in query.wysiwyg

--- a/app/views/builder/index.slim
+++ b/app/views/builder/index.slim
@@ -17,7 +17,10 @@
         $.wysiwyg.i18n.lang[g.i18n_locale] = <%=raw t("jwysiwyg").to_json %>;
       </script>
 
-h1 = @company.name
+div.company-header
+  p
+    span.company-name = @company.name
+    a.company-url#preview-mobile-site target="preview-mobile-site" href=@company.mobile_url = @company.mobile_url
 #builder-container
   #builder
     .left.lfloat
