Added a divider dot in the company-header section

--- a/app/views/builder/index.slim
+++ b/app/views/builder/index.slim
@@ -20,6 +20,7 @@
 div.company-header
   p
     span.company-name = @company.name
+    span.divider-dot ·
     a.company-url#preview-mobile-site target="preview-mobile-site" href=@company.mobile_url = @company.mobile_url
 #builder-container
   #builder
