Replaced feedback@yomobi.com with support@yomobi.com

--- a/app/views/shared/_footer-links.html.erb
+++ b/app/views/shared/_footer-links.html.erb
@@ -2,6 +2,6 @@
   <a href="<%= about_path %>"><%=t'links.about'%></a>    <span class="dot">&middot;</span>
   <a href="<%= privacy_path %>"><%=t'links.privacy'%></a>  <span class="dot">&middot;</span>
   <a href="<%= terms_path %>"><%=t'links.terms'%></a>    <span class="dot">&middot;</span>
-  <a href="mailto:feedback@yomobi.com"><%=t'links.feedback'%></a> <span class="dot">&middot;</span>
+  <a href="mailto:support@yomobi.com"><%=t'links.feedback'%></a> <span class="dot">&middot;</span>
   <a href="http://help.yomobi.com" target="_blank"><%=t'links.help'%></a>
 </div>
