--- a/app/views/shared/_footer-links_new.html.erb
+++ b/app/views/shared/_footer-links_new.html.erb
@@ -3,7 +3,7 @@
     <a href="about" class="footerlink"><%=t'links.about'%></a> ·
     <a href="privacy" class="footerlink"><%=t'links.privacy'%></a> ·
     <a href="terms" class="footerlink"><%=t'links.terms'%></a> ·
-    <a href="mailto:feedback@yomobi.com?subject=%20Get%20mobilized%20with%20YoMobi.&body=The%20world%20is%20on%20the%20go.%20Get%20mobilized%20with%20YoMobi." class="footerlink"><%=t'links.feedback'%></a> ·
+    <a href="mailto:support@yomobi.com?subject=%20Get%20mobilized%20with%20YoMobi.&body=The%20world%20is%20on%20the%20go.%20Get%20mobilized%20with%20YoMobi." class="footerlink"><%=t'links.feedback'%></a> ·
     <a href="http://help.yomobi.com" class="footerlink"><%=t'links.help'%></a><br />
     <%=t'legal.rights_reserved'%>
   </div>
