Added general help link to site manager, updated CSS and fixed untranslated text in es.yml

--- a/app/views/site_manager/index.html.slim
+++ b/app/views/site_manager/index.html.slim
@@ -89,6 +89,7 @@
       | <% } %>
     button.edit =t'site_manager.edit_site'
     button.make-default =t'site_manager.make_default'
+    a href="http://help.yomobi.com/SiteManager" target="ymhelp" =t('links.help')
 
   script.signup-keys(type="text/template")
     .content-header
