Updated jwysiwyg css to fix problem where some images don't have the img.yo class associated with it.

--- a/public/stylesheets/jwysiwyg.css
+++ b/public/stylesheets/jwysiwyg.css
@@ -36,7 +36,7 @@ img.yo-left  { padding: 3px 10px 0px 0px; }
 img.yo-right { padding: 3px 0px 0px 10px; }
 
 img.yo { border: 0px solid transparent; }
-img.yo.jwysiwyg-selected { 
+.jwysiwyg-selected { 
 	border-color: #00f;
 	filter:progid:DXImageTransform.Microsoft.Alpha(opacity=50);
 	-moz-opacity: 0.5;
