--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -87,7 +87,11 @@ div.wysiwyg ul.toolbar {
       float: left;
       margin: 0;
       width: 18px;
-      height: 18px; } }
+      height: 18px; 
+      border-radius: 0px;
+      -webkit-border-radius: 0px;
+      -moz-border-radius: 0px;
+    } }
   .home-icon:hover {
     background: url(/images/ui/yellowbg-small.png);
     .add { visibility: visible; }
@@ -309,7 +313,7 @@ div.wysiwyg ul.toolbar {
     margin: 0 auto; }
   .action-bar {
     padding: 12px 0 0;
-    margin: 0 auto;
+    margin-top: 6px;
     border-top: 1px solid $light-border; }
   .accept-btn {
     float: right; }
