Updated header colors to replace the blue with homepage-gray to make it more consistent looking

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -107,7 +107,7 @@ body {
 	height:32px;
 }
 .signup-btn {
-    background:url(../images/new_design/signup-button.png);
+    //background:url(../images/new_design/signup-button.png);
 	float:right;
 	text-decoration: none;
 	font-family: Impact, Charcoal, sans-serif;
