--- a/public/stylesheets/sass/signup.scss
+++ b/public/stylesheets/sass/signup.scss
@@ -8,11 +8,20 @@
 
 #header.signed-out {
   padding: 14px 0 25px 0;
-  background: url(/images/bg-header.png);
+  //background: url(/images/bg-header.png);
+background: #3a3a3a; /* Old browsers */
+background: -moz-linear-gradient(top,  #3a3a3a 0%, #545454 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3a3a3a), color-stop(100%,#545454)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #3a3a3a 0%,#545454 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #3a3a3a 0%,#545454 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #3a3a3a 0%,#545454 100%); /* IE10+ */
+background: linear-gradient(top,  #3a3a3a 0%,#545454 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3a3a3a', endColorstr='#545454',GradientType=0 ); /* IE6-9 */
+
   color: $header-font-color;
   height: 55px;
   .subtext, .subtext:visited {
-    color: #98a9ca; }
+    color: #C5C5C5; }
   & > .content {
     width: $page-width;
     margin: 0 auto; }
@@ -34,20 +43,29 @@
       margin: 0px;
       border-color: #8A9CC2;}
     .main-btn {
-      background: #5B74A8;
-      padding: 3px 4px 3px 4px;
-      margin: 0;
-      border: 1px solid #5B74A8;
-      border-top-color: #8A9CC2;
+      background: #0290ee;
+      border-radius: 4px;
+      -moz-border-radius: 4px;
+      -webkit-border-radius: 4px;
+      box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+      -moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+      -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
       color: white;
-      font-size:11px;
-      font-weight: bold;
-      cursor: pointer; }
+      display: block;
+      float: left;
+      font-size: 14px;
+      font-weight: normal;
+      text-align: center;
+      text-decoration: none;
+      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+      cursor: pointer; 
+      border: none;
+    }
 
     table tr td {
-      padding: 0px 14px 4px 0px; }
+      padding: 0px 14px 0px 0px; }
    #label_persistent {
-      color: #98a9ca;
+      color: #C5C5C5;
     }
   }
   #nav {
