--- a/app/views/home/why_mobile.html
+++ b/app/views/home/why_mobile.html
@@ -1,7 +1,7 @@
 
 <div id="why_mobile" class="yomobi-info-page">
 
-<h1>Having a mobile-optimized site is important.<h1>
+<h1>Having a mobile-optimized site is important.</h1>
 <h2>When you  <span class="hilite-good">do</span> have a mobile site:</h2>
 <ul>
 <li>Case studies show a <span class="hilite-good">250% increase in visitor-to-customer conversion</span> rates with a mobile optimized website.</li>
