--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -74,3 +74,5 @@ html lang="en-US"
 
     - if Rails.env.production?
       = javascript_include_tag 'google-analytics'
+
+    = stylesheet_link_tag 'change-wicon'
