--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -785,15 +785,13 @@ div.wysiwyg ul.toolbar {
     padding: 10px 0 10px 0;
     border: 1px solid #ccc;
     overflow: auto;
-        
-    img {
+
+    .wicon-opt {
       border: 2px solid #fff;
-      padding: 1px;
       cursor: pointer;
-      width: 40px; height: 40px;
     }
-    img:hover { border: 2px solid $highlight-color; }
-    img.selected {
+    .wicon-opt:hover { border: 2px solid $highlight-color; }
+    .wicon-opt.selected {
       border: 2px dashed black;
     }
   }
