Fixed CSS issues that arose from merging premium with master

--- a/app/views/home/why_mobile.html
+++ b/app/views/home/why_mobile.html
@@ -1,21 +1,20 @@
 
 <div id="why_mobile" class="yomobi-info-page">
 
-<h1>Having a mobile-optimized site is important.</h1>
-<h2>When you  <span class="hilite-good">do</span> have a mobile site:</h2>
-<ul>
-<li>Case studies show a <span class="hilite-good">250% increase in visitor-to-customer conversion</span> rates with a mobile optimized website.</li>
-<h1>Having a mobile-optimized site is important.</h1>
-
+<h2>Having a mobile-optimized site is important.</h2>
 <ul class="language-bar">
 <li><a href="why-mobile">English</a></li>
 <li>·</li>
 <li><a href="why-mobile_es">Español</a></li>
 </ul>
 
+<h2>When you  <span class="hilite-good">do</span> have a mobile site:</h2>
+<ul class="bold_list">
+<li>Case studies show a <span class="hilite-good">250% increase in visitor-to-customer conversion</span> rates with a mobile optimized website.</li>
 </ul>
+
 <h2>When you  <span class="hilite-warning">don't</span> have a mobile site:</h2>
-<ul>
+<ul class="bold_list">
 <li><span class="hilite-warning">Existing customers are frustrated and you lose revenue opportunity.</span></li>
 <li><span class="hilite-warning">Your new customer reach shrinks</span> because more people browse the web on their phones.</li>
 <li><span class="hilite-warning">40% of your mobile vistors will turn to your competitor</span> after a bad mobile experience.</li>
