--- a/public/stylesheets/sass/signup.scss
+++ b/public/stylesheets/sass/signup.scss
@@ -359,6 +359,7 @@ label {
   h3 { margin: 10px 0px 5px 0px; }
   h4 { margin-bottom: 4px; }
   p { margin: 0px 6px; }
+  p.error { margin: 3px 20px 3px 0; }
   textarea, input[type=text], input[type=password] {
     font-size: 1.2em;
     width:450px;
