Updated the opportunities, plans, why_mobile pages and added spanish version of opportunities and plans

--- a/app/views/home/plans_es.html
+++ b/app/views/home/plans_es.html
@@ -69,7 +69,7 @@
 
 <div class="notation-text">
 <ol>
-<li>Usage threshold limits may apply.</li>
+<li>Usage threshold limits may apply</li>
 <li>A standard site includes the following pages and features: About Us, Call Us (one-click calling), Find Us (interactive map with smartphone GPS navigation), Business Hours, Coupon, Keep Me Informed, Leave a Message, Call Me Back, and links to your desktop website, facebook page and twitter accounts, if applicable.</li>
 </ol>
 </div>
